--- a/src/input.css
+++ b/src/input.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+* {
+  @apply transition-colors duration-200;
+}
+
+/* npx tailwindcss -i ./src/input.css -o ./dist/output.css --watch */
