--- a/src/style.css
+++ b/src/style.css
@@ -33,3 +33,7 @@
     var(--tw-backdrop-opacity) var(--tw-backdrop-saturate)
     var(--tw-backdrop-sepia);
 }
+
+.text-shadow {
+  text-shadow: 4px 4px rgba(0, 0, 0, 0.35);
+}
