--- a/src/style.css
+++ b/src/style.css
@@ -34,6 +34,22 @@
     var(--tw-backdrop-sepia);
 }
 
-.text-shadow {
+.text-shadow-1 {
+  text-shadow: 1px 1px rgba(0, 0, 0, 0.35);
+}
+
+.text-shadow-2 {
+  text-shadow: 2px 2px rgba(0, 0, 0, 0.35);
+}
+
+.text-shadow-3 {
+  text-shadow: 3px 3px rgba(0, 0, 0, 0.35);
+}
+
+.text-shadow-4 {
   text-shadow: 4px 4px rgba(0, 0, 0, 0.35);
+}
+
+.text-shadow-5 {
+  text-shadow: 5px 5px rgba(0, 0, 0, 0.35);
 }
